# karaoke

./: .gitignore  Cargo.toml  rust-toolchain
src/: audio.rs  bpm_detector.rs  bpm_dialog.rs  config.rs  dasp_signal_ext.rs  data_owner.rs  error.rs  fonts.rs  lib.rs  linest.rs  main.rs  measure_dialog.rs  schema.rs  score_editor.rs  serde_ord_map.rs
src/druid_supplemental/: mod.rs  registering_focus.rs  utils.rs  widget_ext_ext.rs
src/score_editor/: bpm_dialog.rs  commands.rs  data.rs  formatting.rs  layouts.rs  lyrics_editor.rs  lyrics_mapping_dialog.rs  measure_dialog.rs  misc.rs  mod.rs  score_editor_widget.rs
