[package]
name = "karaoke"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
cpal = "0.13.2"
dasp = { version = "0.11.0", features = ["signal"] }
derive-getters = "0.2.0"
derive-new = "0.5.9"
derive_more = "0.99.11"
druid = { git = "https://github.com/linebender/druid", branch = "master", features = ["im"] }
freetype-rs = "0.26.0"
itertools = "0.10.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
rodio = { version = "0.13.0", path = "../rodio" }
rustybuzz = "0.3.0"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["sync"] }
toml = "0.5.8"
universal-audio-decoder = { path = "../universal-audio-decoder/" }

[patch.crates-io]
im = { git = "https://github.com/arthurprs/im-rs", branch = "fix" }
